--- a/colorGame.html
+++ b/colorGame.html
@@ -5,15 +5,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Color Game</title>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="colorGame.css">
 </head>
 
 <body>
 
-    <h1>The Great <span id="colorDisplay">RGB</span> Color Guessing Game</h1>
+    <h1>The Great <br>
+        <span id="colorDisplay">RGB</span> <br>
+        Color Game</h1>
 
-    <div>
+    <div id="stripe">
+        <button id="reset">New Colors</button>
         <span id="message"></span>
+        <button id="easyBTN">Easy</button>
+        <button id="hardBTN" class="selected">Hard</button>
     </div>
 
     <div id="container">
